PageSize added to API
