# backend/openapi.yml
@@ -83,6 +83,19 @@ paths:
       operationId: listUsers
       security:
         - cookieAuth: []
+      parameters:
+        - name: page
+          in: query
+          description: The requested page number
+          required: true
+          schema:
+            type: integer
+        - name: pageSize
+          in: query
+          description: The requested page size
+          required: false
+          schema:
+            type: integer
       responses:
         200:
           description: Page of users
