# backend/src/helpers/RequestHelper.ts
@@ -1,11 +1,31 @@
+import { KnexUserRepository } from '@/repository/knex/user.repository';
 import { Request } from 'express';
 
 export function parsePageQueryParam(request: Request) {
-  const queryStringPage = request.query.page;
+  return (
+    parseNumberQueryParam(request, 'page') || KnexUserRepository.DEFAULT_PAGE
+  );
+}
+
+export function parsePageSizeQueryParam(request: Request) {
+  const requestedPageSize =
+    parseNumberQueryParam(request, 'pageSize') || KnexUserRepository.PAGE_SIZE;
+  return requestedPageSize > 100 ? 100 : requestedPageSize;
+}
+
+function parseNumberQueryParam(
+  request: Request,
+  param: string,
+): number | undefined {
+  const queryStringPage = request.query[param];
 
   if (typeof queryStringPage === 'string') {
-    return Number(queryStringPage);
-  } else {
-    return 1;
+    const maybeNumber = Number(queryStringPage);
+
+    if (!isNaN(maybeNumber)) {
+      return maybeNumber;
+    }
   }
+
+  return undefined;
 }
